2.1: implement get article by id
